--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@
 #    pip-compile --output-file=requirements.txt requirements.in
 #
 numpy==1.18.4             # via -r requirements.in
+pandas==1.1.4
