--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 __pycache__/
 *.py[cod]
 *$py.class
+.vscode/*
+.DS_Store
 
 # C extensions
 *.so
@@ -151,4 +153,3 @@ media
 static
 
 # Project related ignores (place project related ignores below here)
-.vscode/*
