--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -8,6 +8,10 @@ appdirs==1.4.4
     # via
     #   black
     #   virtualenv
+appnope==0.1.2
+    # via
+    #   ipykernel
+    #   ipython
 argon2-cffi==20.1.0
     # via notebook
 attrs==20.1.0
