--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,7 +24,7 @@ repos:
     rev: "2.0.5" # Use the sha or tag you want to point at
     hooks:
       - id: prettier
-  - repo: git@github.com:Yelp/detect-secrets
+  - repo: https://github.com/Yelp/detect-secrets
     rev: v0.14.3
     hooks:
       - id: detect-secrets
